Fix Few Comiple time issues